saving work with stores and react redux

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,7 @@
       </div>
     </main>
   </body>
-  <script src="{{ url_for('static', filename='index.js') }}" type="text/javascript"></script>
-  <script src="{{ url_for('static', filename='Joke.jsx') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='dist/bundle.js') }}" type="text/javascript"></script>
   {% block scripts %}
   {% endblock %}
 </html>
